fix: fix multi-thumb Slider on IE, fix DatePicker style

--- a/packages/veui-theme-one/components/slider.less
+++ b/packages/veui-theme-one/components/slider.less
@@ -62,6 +62,10 @@
   &-thumb {
     position: absolute;
     left: 0;
+    background: none;
+    padding: 0;
+    border: none;
+    overflow: visible;
     // 利用 translateX 左偏移一半，实现 thumb 宽度自适应
     transform: translateX(-50%);
     cursor: pointer;
